--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /data
 /data_processing
-/movement_control/CMSIS
-/movement_control/Library
-/movement_control/project
-/movement_control/Startup
+movement_control/CMSIS/
+movement_control/Library/
+movement_control/project/
+movement_control/Startup/
